--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@types/stacktrace-js": "^2.0.3",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
     "rxjs": "~6.6.0",
+    "stacktrace-js": "^2.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
